--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: 'calibri';
+  font-style: normal;
+  font-weight: 700;
+  src: url('/fonts/calibri/calibri-bold.ttf')
+}
+@font-face {
+  font-family: 'calibri';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/calibri/calibri-regular.ttf')
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.font-calibri{
+  font-family: 'calibri';
 }
