--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,41 @@
     url("/fonts/fraklin/FranklinGothic-normal.woff") format("woff");
 }
 
-
 .font-calibri{
   font-family: 'calibri';
+}
+.font-franklin{
+  font-family: "Franklin Gothic Regular";
+}
+
+.header-gradient{
+  background: linear-gradient(0deg, rgba(38,160,217,0) 0%, rgba(255,255,255,1) 77%);
+}
+
+.container{
+  max-width: 1460px;
+}
+
+.fullscreen-video-container {
+  position: relative;
+  height: 100vh; 
+  width: 100vw;
+  overflow: hidden;
+}
+
+.fullscreen-video-container video {
+  position: absolute;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: cover; 
+  z-index: -100;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.certification-gradient{
+  background: linear-gradient(167deg, rgba(46,54,143,1) 0%, rgba(13,15,41,1) 75%);
 }
