--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,30 +4,36 @@
 
 @font-face {
   font-family: 'calibri';
-  font-style: normal;
   font-weight: 700;
   src: url('/fonts/calibri/calibri-bold.ttf')
 }
 @font-face {
   font-family: 'calibri';
-  font-style: normal;
   font-weight: 400;
   src: url('/fonts/calibri/calibri-regular.ttf')
 }
 
 @font-face {
-  font-family: "Franklin Gothic Regular";
+  font-family: 'calibri';
+  font-weight: 300;
+  src: url('/fonts/calibri/calibri-light.ttf')
+}
+
+
+
+@font-face {
+  font-family: "Franklin_Gothic_Regular";
   font-style: normal;
   font-weight: normal;
   src: local("Franklin Gothic Regular"),
-    url("/fonts/fraklin/FranklinGothic-normal.woff") format("woff");
+    url("/fonts/fraklin/Franklin-Regular.ttf");
 }
 
-.font-calibri{
+.font_calibri{
   font-family: 'calibri';
 }
-.font-franklin{
-  font-family: "Franklin Gothic Regular";
+.font_franklin{
+  font-family: "Franklin_Gothic_Regular";
 }
 
 .header-gradient{
@@ -61,3 +67,5 @@
 .certification-gradient{
   background: linear-gradient(167deg, rgba(46,54,143,1) 0%, rgba(13,15,41,1) 75%);
 }
+
+.centermodeRight .slick-list{padding:0 20% 0 0 !important;}
