--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,3 +69,7 @@
 }
 
 .centermodeRight .slick-list{padding:0 20% 0 0 !important;}
+
+.blue_gradient{
+  background: linear-gradient(180deg, rgba(178,182,224,1) 0%, rgba(23,31,124,1) 75%);
+}
