--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,6 +64,27 @@
   transform: translateX(-50%) translateY(-50%);
 }
 
+.wherehouse-video{
+  position: relative;
+  height: 400px; 
+  width: "100%";
+  overflow: hidden;
+}
+.wherehouse-video video {
+  position: absolute;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: cover; 
+  z-index: -100;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0%;
+  /* transform: translateX(-50%) translateY(-50%); */
+}
+
 .certification-gradient{
   background: linear-gradient(167deg, rgba(46,54,143,1) 0%, rgba(13,15,41,1) 75%);
 }
