--- a/src/app/style.css
+++ b/src/app/style.css
@@ -8,6 +8,37 @@
     color: #3E3E3E;
 }
 
-.ship_supply_content{
-    
+.page_navigation_gradient{
+    background: linear-gradient(85deg, rgba(178,182,224,1) 0%, rgba(46,54,143,1) 100%);
+}
+
+.ship_supply_content h2{
+    font-size: 40px;
+    font-weight: 400;
+    font-family: "Franklin_Gothic_Regular";
+    margin-bottom: 1rem;
+}
+.ship_supply_content p{
+    font-weight: 300;
+    font-size: 18px;
+    font-family: 'calibri';
+    margin-bottom: 1rem;
+}
+.ship_supply_content ul{
+    list-style-type: disc;
+    padding-left: 1.2rem;
+}
+.ship_supply_content ul li{
+    font-weight: 300;
+    font-size: 18px;
+    font-family: 'calibri';
+    margin-bottom: 1rem;
+}
+
+.ship_supply_content_one_column ul li{
+    margin-bottom: 0rem !important;
+}
+
+.privacy_content .content p{
+    font-size: 18px;
 }
