--- a/src/app/style.css
+++ b/src/app/style.css
@@ -42,3 +42,8 @@
 .privacy_content .content p{
     font-size: 18px;
 }
+
+.footer_gradient{
+    /* background: linear-gradient(180deg, rgba(244,245,247,1) 0%, rgba(46,54,143,.19) 100%); */
+    background: linear-gradient(180deg, rgba(244,245,247,0.9669117647058824) 0%, rgba(200,203,224,.19) 25%, rgba(175,179,211,.19) 39%, rgba(154,159,200,.19) 55%, rgba(46,54,143,.19) 100%);
+}
