--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -270,3 +270,19 @@ p {
   font-weight: bold;
   border-radius: 20px;
 }
+
+@media(max-width: 768px){
+  .oc_content h2{
+    text-align: center;
+    font-size: 25px !important;
+    line-height: 35px !important;
+  }
+  .oc_content p{
+    text-align: center !important;
+    font-size: 12px !important;
+  }
+  .oc_content h3{
+    font-size: 14px !important;
+    text-align: center !important;
+  }
+}
