--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,17 @@ html {
   overflow-x: hidden !important;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+  font-family: 'calibri';
+}
+
 .container {
   max-width: 1337px !important;
 }
