prevent user to select text and disable right click on image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,10 @@ html {
   overflow-x: hidden !important;
 }
 
+body {
+  user-select: none;
+}
+
 h1,
 h2,
 h3,
@@ -44,7 +48,7 @@ p,
 span {
   font-family: 'calibri';
 }
-  
+
 .container {
   max-width: 1337px !important;
 }
